2007-09-28  Øyvind Kolås  <pippin@openedhand.com>

	* clutter/glx/clutter-stage-glx.c: (clutter_stage_glx_realize):
	removed unused variable perspective.
	* tests/test-events.c: (main): added CLUTTER_STAGE() cast.
	* tests/test-threads.c: include unistd.h for sleep().

2007-09-28  Øyvind Kolås  <pippin@openedhand.com>

	* clutter/clutter-label.c: (clutter_label_ensure_layout): avoid
	calling pango_layout_set_text|markup before we've got any text.

2007-09-27  Matthew Allum  <mallum@openedhand.com>

	* tests/test-scale.c:
	Fix out of about array addressing (#522, Tommi Komulainen)

2007-09-27  Matthew Allum  <mallum@openedhand.com>

	* clutter/clutter-clone-texture.c:
	* clutter/clutter-rectangle.c:
	Include "config.h" in all c files (#524, Tommi Komulainen)

2007-09-27  Matthew Allum  <mallum@openedhand.com>

	Merge from stable.     

        * clutter/clutter-behaviour-path.c: (path_alpha_to_position)
        Fix uninitialized variable (#480, Gwenole Beauchesne)

2007-09-27  Matthew Allum  <mallum@openedhand.com>

	* clutter/clutter-event.c:
	* clutter/clutter-event.h:
	* clutter/clutter-main.c:
	Further event tweaks;
	- Ref the event actor source
	- Protect against off stage events (button releases) (#511)
	- Move more into ClutterEventAny
	- Add a click count to button event (as yet unused)
	- Minor cleanups

	* clutter/clutter-actor.c:
	Make scale x/y a property.

	* clutter/clutter-private.h:
	Remove _clutter_actor_apply_modelview*

	* clutter/eglx/clutter-backend-egl.c:
	Warning cleanup

	* clutter/eglx/clutter-stage-egl.c:
	* clutter/glx/clutter-stage-glx.c:
	* clutter/sdl/clutter-stage-sdl.c:
	Avoid setting viewport directly, but set sync flag.

	* clutter/pango/pangoclutter-render.c: (draw_glyph):
	Minor cleanups.

	* clutter/Makefile.am:
	* tests/Makefile.am:
        * tests/test-score.c
	* clutter/clutter.h:
	* clutter/clutter-score.h:
	* clutter/clutter-score.c:
	Add very initial (broken) ClutterScore implementation.
